fixed contacts alignment

--- a/packages/messenger-widget/src/components/Contacts/Contacts.css
+++ b/packages/messenger-widget/src/components/Contacts/Contacts.css
@@ -1,5 +1,5 @@
 .contacts-scroller {
-    height: 80vh;
+    height: 88vh;
     padding-left: 1rem;
     margin-top: 2px;
 }
